--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 	<div class="head">
 		<div class="hair">
+			<div class="hair-right"></div>
+			<div class="hair-left"></div>
 			<div class="hair-corner"></div>
 		</div>
 		<div class="brows">
@@ -20,6 +22,10 @@
 		<div class="eyes">
 			<div class="eye"></div>
 			<div class="eye"></div>
+		</div>
+		<div class="blushes">
+			<div class="blush"></div>
+			<div class="blush"></div>
 		</div>
 		<div class="nose"></div>
 		<div class="mouth"></div>
